--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,30 @@
-body{
-    /*font-family: "Comic Neue", cursive;*/
+html
+{
+  font-size: 22px
+}
+body
+{
+  background-color: #333;
+  color: whitesmoke;
+}
+.Start{
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  text-align: left;
+  padding: 8px;
+}
+.content {
+  display: flex;
+  align-items: center;
+}
+
+.content img {
+  margin-right: 20px; /* Space between the image and the text */
+}
+
+.content .text {
+  max-width: 500px; /* Adjust the width of the text area */
 }
 .center_div {
 font-family: "Comic Neue", cursive;
@@ -7,10 +32,17 @@ font-family: "Comic Neue", cursive;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
-  background-color: #d0f0f6;
+  background-color: #00414d;
   text-align: left;
   padding: 8px;
 }
-h1{
-    /*font-family: "Comic Neue", cursive;*/
+.div-2{
+  background-color: #ca5555;
+  font-family: "Comic Neue", cursive;
+  border: 1px solid gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  text-align: left;
+  padding: 8px;
 }
