--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html
 }
 body
 {
-  background-color: #333;
+  background-color: #311D3F;
   color: whitesmoke;
 }
 .Start{
@@ -18,21 +18,57 @@ body
   display: flex;
   align-items: center;
 }
-
+.imgur-embed-pub {
+  border: none !important; /* Important to override any inline styles */
+  padding: 0; /* Remove any padding if needed */
+}
 .content img {
   margin-right: 20px; /* Space between the image and the text */
 }
 
 .content .text {
   max-width: 500px; /* Adjust the width of the text area */
+
+}
+.linkText a{
+  max-width: 500px; /* Adjust the width of the text area */
+  color: rgb(152, 55, 177);
+  text-decoration: none;
+}
+.linkText a:hover {
+  color: red;
+}
+.center_div a{
+  max-width: 500px; /* Adjust the width of the text area */
+  color: blue;
+  text-decoration: none;
+}
+.center_div a:hover {
+  color: red;
 }
 .center_div {
 font-family: "Comic Neue", cursive;
   border: 1px solid gray;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 10px auto;
   width: 90%;
-  background-color: #00414d;
+  background-color: #88304E;
+  text-align: left;
+  padding: 8px;
+}
+.center_div2 a{
+  max-width: 500px; /* Adjust the width of the text area */
+  color: blue;
+  text-decoration: none;
+}
+.center_div2 a:hover {
+  color: red;
+}
+.center_div2 {
+font-family: "Comic Neue", cursive;
+  border: 1px solid gray;
+  margin: 10px auto;
+  width: 90%;
+  background-color: #522546;
   text-align: left;
   padding: 8px;
 }
